# ChangeLog for app-arch/dpkg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.103 2009/10/21 06:12:07 jer Exp $

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.2.ebuild,
  dpkg-1.15.3.ebuild, dpkg-1.15.3.1.ebuild, dpkg-1.15.4.ebuild,
  dpkg-1.15.4.1.ebuild:
  Depend on IO-String for tests (bug #289952).

*dpkg-1.15.4.1 (19 Oct 2009)

  19 Oct 2009; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.4.1.ebuild:
  Version bump.

*dpkg-1.15.4 (07 Sep 2009)

  07 Sep 2009; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.4.ebuild:
  Version bump.

  15 Aug 2009; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.2.ebuild,
  dpkg-1.15.3.ebuild, dpkg-1.15.3.1.ebuild:
  Do not check for selinux at all, ever (bug #278169 comment #14).

  13 Aug 2009; Jeroen Roovers <jer@gentoo.org>
  -files/dpkg-1.14.12-nls.patch, -files/dpkg-1.14.16.6-check-PATH.patch,
  -dpkg-1.14.20.ebuild, -dpkg-1.14.22.ebuild, -dpkg-1.14.23.ebuild,
  -dpkg-1.14.25.ebuild, -files/dpkg-1.14.25-start-stop-daemon.8.patch,
  -dpkg-1.14.26.ebuild, -dpkg-1.15.0.ebuild, -dpkg-1.15.1.ebuild,
  dpkg-1.15.2.ebuild, dpkg-1.15.3.ebuild, dpkg-1.15.3.1.ebuild:
  Remove old. Remove USE=selinux (bug #278169).

  24 Jul 2009; Joseph Jezak <josejx@gentoo.org> dpkg-1.15.2.ebuild:
  Marked ppc stable for bug #275403.

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> dpkg-1.15.2.ebuild:
  arm/ia64/m68k/s390/sh stable wrt #275403

*dpkg-1.15.3.1 (09 Jul 2009)

  09 Jul 2009; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.3.1.ebuild:
  Version bump.

  08 Jul 2009; Markus Meier <maekke@gentoo.org> dpkg-1.15.2.ebuild:
  amd64 stable, bug #275403

  01 Jul 2009; Christian Faulhammer <fauli@gentoo.org> dpkg-1.15.2.ebuild:
  stable x86, bug 275403

  30 Jun 2009; Tobias Klausmann <klausman@gentoo.org> dpkg-1.15.2.ebuild:
  Stable on alpha, bug #275403

  30 Jun 2009; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.2.ebuild:
  Stable for HPPA (bug #275403).
