@@ -4,10 +4,12 @@ DIST dpkg_1.15.3.1.tar.gz 7071636 RMD160 b03617937c25995b67e311c388ab1d529544375
 DIST dpkg_1.15.3.tar.gz 7070609 RMD160 491cc6c5ca0774f20f4dcf3e2115f8020027ce52 SHA1 9b6ddecf88cfcc0a106aa533746cc97595833008 SHA256 3dbc0cfdeee4535680d73a7967ee9580f5a55de36b99d13ce8bed643dadc1e2c
 DIST dpkg_1.15.4.1.tar.gz 7037176 RMD160 783e19e1e1bcbe477a98474c762de9fdd8ea7a8e SHA1 bd1c8f8e1d2c9761f3b823cb82b5f0104cb6ac79 SHA256 a3b0932748648d0699d28f3327a0d5eb8287f51e6cacecac90c418b197a7da5f
 DIST dpkg_1.15.4.tar.gz 7036109 RMD160 17affb0a33e98069029894bb13180be1af98d38f SHA1 732c4dd9cd848768b1dd270697738a84ca1baefd SHA256 87cc8f29595e3b63f3c732bfc44b76e991114dbb6411ed82f50bf97b59716543
+DIST dpkg_1.15.5.tar.bz2 4656922 RMD160 be90bcc4c28dcf191e6998db6056c7cbee912cc3 SHA1 f80768b09bad7c79d57ea247fa30d9e2cf8c8418 SHA256 58936b5ce1e0155ecbb67845f7e4de24a1bebcd8bedd714020fc4bc13e726c43
 EBUILD dpkg-1.15.2.ebuild 1485 RMD160 7a68cd060b8c153f47ac5bc50272a37f6475e9d1 SHA1 4dcd65028b1319838a1eb628404b9e2d4a035164 SHA256 26655a949aaeed4b1d11447b25515776615365f901028394b9153c4b345b63de
 EBUILD dpkg-1.15.3.1.ebuild 1497 RMD160 eb202862df76d4ef2003d5afecd35272b8ae2a0b SHA1 44ade4f5141581e931243ebb8ea6542bade00237 SHA256 d6298dc18fb2a674b2e62b1e51f714c8e9dc4070c8fb1bf319e79fd92b5e6d7f
 EBUILD dpkg-1.15.3.ebuild 1495 RMD160 516941dcfd20d314996d8256ba68a2846954f4ba SHA1 cfb9b9c6a70d57466ed5f1f9e2c6f478187c8665 SHA256 9f18ed58dc678548179d66bc0041780966b19d3642bb469d618040d2a34f4f77
 EBUILD dpkg-1.15.4.1.ebuild 1497 RMD160 616c9c6dc1cb52e4c79979980640d88bd95d4b8a SHA1 faf4819d3218d7bb6657738eca2a9e6d0e35a558 SHA256 3722e3e4f82d926e6be48baf5f7c4f488d391e8747cf186ba07e54a38bbe1c1b
 EBUILD dpkg-1.15.4.ebuild 1495 RMD160 bdb90bbb7bd8bae43b6395b63bec19d497b152eb SHA1 cadef511ed8e2d45e853a6d436c9e5dfbd75d76d SHA256 c35e57febea275e19f182473cc1de331d52c0b2e189edd0b1d9871744a0ed917
-MISC ChangeLog 13356 RMD160 d18fed325bd567a84a684f261f88b55c247959c8 SHA1 2a6cb4d53e15ba8d8a525ed9b2eeccce33e870c5 SHA256 3d23cc726dfba075d13a106f4c3aac9adbd58f4c917e1bbd97d8d99ba61a1611
+EBUILD dpkg-1.15.5.ebuild 1496 RMD160 4b131463e5b7451bb2d9a8e4cfffcf9bdf253a73 SHA1 24cdfe38dbda276c48ab1f76897dae26af3906a8 SHA256 5b9e6c95397debed349c7aee7c7fd5c9b88b56dd0ba54c9581c5b56211604a24
+MISC ChangeLog 13469 RMD160 d57047b83ef85473df1fe300531b1319d72c8fc1 SHA1 668ed108ec8eb58d27376d63b1c0a62de877a684 SHA256 1aad19aa16a0cf229935c84dd442ea240c9ac03b0a6151232fc77bcc434ea018
 MISC metadata.xml 162 RMD160 ebe445a93e16f05a392ebdf3882b56b92931e37e SHA1 8bc26eb7c98535f3e31d2288f25fba83838857e5 SHA256 316a32c1e8ee9f6548707abec9a803d0a19feea1be10a19273cc04e0cd357644
