@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/dpkg
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.103 2009/10/21 06:12:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.104 2009/11/17 16:14:22 jer Exp $
+
+*dpkg-1.15.5 (17 Nov 2009)
+
+  17 Nov 2009; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.5.ebuild:
+  Version bump.
 
   21 Oct 2009; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.2.ebuild,
   dpkg-1.15.3.ebuild, dpkg-1.15.3.1.ebuild, dpkg-1.15.4.ebuild,
